fix gap

--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ body {
     margin-bottom: 40px;
 }
 
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
 img {
     max-width: 100%;
     height: auto;
